`slice` is better, and so is `predict`.

--- a/tgba/tgba.bib
+++ b/tgba/tgba.bib
@@ -1,3 +1,26 @@
+@ARTICLE{1986Natur.323.533R,
+       author = {{Rumelhart}, David E. and {Hinton}, Geoffrey E. and {Williams}, Ronald J.},
+        title = "{Learning representations by back-propagating errors}",
+      journal = {Nature},
+         year = 1986,
+        month = oct,
+       volume = {323},
+       number = {6088},
+        pages = {533-536},
+          doi = {10.1038/323533a0},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1986Natur.323..533R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@misc{goodfellow2014generative,
+      title={Generative Adversarial Networks}, 
+      author={Ian J. Goodfellow and Jean Pouget-Abadie and Mehdi Mirza and Bing Xu and David Warde-Farley and Sherjil Ozair and Aaron Courville and Yoshua Bengio},
+      year={2014},
+      eprint={1406.2661},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
 @ARTICLE{10.3389/fphy.2020.525731,
   AUTHOR={Vazza, F. and Feletti, A.},
   TITLE={The Quantitative Comparison Between the Neuronal Network and the Cosmic Web},
